# batchedllm

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint_and_test.yml  publish.yml  release_and_publish.yml
examples/: openai_speed.py
src/batchedllm/: __init__.py  batch.py  cached_manager.py  manager.py
src/batchedllm/util/: __init__.py
src/batchedllm/util/openai/: __init__.py  file.py  finetuning.py
tests/: test_manager.py
