[project]
name = "batchedllm"
readme = "README.md"
keywords = ["batched", "LLM"]
authors = [
    {name = "Danil Kireev", email="nenil@nenil.dev"},
    {name = "Daniil Larionov", email="rexhaif.io@gmail.com"},
]
license = "MIT"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
openai = [
    "openai>=2.32.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"


[project.urls]
repository = "https://github.com/batchedllm/batchedllm"

[build-system]
requires = ["hatchling", "hatch-docstring-description"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/batchedllm/__init__.py"

[tool.hatch.metadata.hooks.docstring-description]
